--- a/src/moloko_shokolad.html
+++ b/src/moloko_shokolad.html
@@ -90,9 +90,11 @@
                     </div>
                     <div class="header__item col">
                         <ul>
-                            <li class="telephone">ЧЕРКАСИ</li>
                             <li class="telephone text-nowrap">
-                                <a class="telephone text-nowrap" href="tel:+380989700929">(098) 970-09-29</a>
+                                <a class="telephone text-nowrap" href="tel:+380989700929">ЧЕРКАСИ (098) 970-09-29</a>
+                            </li>
+                            <li class="telephone text-nowrap">
+                                <a class="telephone text-nowrap" href="tel:+380974996005">ХМЕЛЬНИЦЬКИЙ (097) 499-60-05</a>
                             </li>
                         </ul>
                     </div>
@@ -441,6 +443,10 @@
                             <div class="col footer-left">
                                 <h6>Черкаси</h6>
                                 <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
+                            </div>
+                            <div class="col footer-left">
+                                <h6>Хмельницький</h6>
+                                <a class="telephone text-nowrap" href="tel:+380974996005">т. +38 (097) 499-60-05</a>
                             </div>
                         </div>
                         <div class="row">
