--- a/src/contacty.html
+++ b/src/contacty.html
@@ -91,9 +91,11 @@
                     </div>
                     <div class="header__item col">
                         <ul>
-                            <li class="telephone">ЧЕРКАСИ</li>
                             <li class="telephone text-nowrap">
-                                <a class="telephone text-nowrap" href="tel:+380989700929">(098) 970-09-29</a>
+                                <a class="telephone text-nowrap" href="tel:+380989700929">ЧЕРКАСИ (098) 970-09-29</a>
+                            </li>
+                            <li class="telephone text-nowrap">
+                                <a class="telephone text-nowrap" href="tel:+380974996005">ХМЕЛЬНИЦЬКИЙ (097) 499-60-05</a>
                             </li>
                         </ul>
                     </div>
@@ -279,6 +281,14 @@
                         <a href="tel:+380989700929">+38(098) 970-09-29</a>
                     </li>
                 </ul>
+                <div class="container hr-line-contacts"></div>
+                <h6><b>ХМЕЛЬНИЦЬКИЙ</b></h6>
+                <ul>
+                    <li class="text-nowrap tel">
+                        <i class="bi bi-telephone-fill green"></i>
+                        <a href="tel:+380974996005">+38(097) 499-60-05</a>
+                    </li>
+                </ul>
             </div>
             <div class="col p-5 m-3 mb-5 contacts fill">
                 <h5 class="text-center green"><b>ВЕНДІНГ</b></h5>
@@ -376,6 +386,10 @@
                             <div class="col footer-left">
                                 <h6>Черкаси</h6>
                                 <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
+                            </div>
+                            <div class="col footer-left">
+                                <h6>Хмельницький</h6>
+                                <a class="telephone text-nowrap" href="tel:+380974996005">т. +38 (097) 499-60-05</a>
                             </div>
                         </div>
                         <div class="row">
