facebook script change & machine page

--- a/src/avtomaty.html
+++ b/src/avtomaty.html
@@ -39,11 +39,11 @@
             s.parentNode.insertBefore(t, s)
         }(window, document, 'script',
             'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '3311079555831977');
+        fbq('init', '1211586936450413');
         fbq('track', 'PageView');
     </script>
     <noscript>
-        <img height="1" width="1" src="https://www.facebook.com/tr?id=3311079555831977&ev=PageView&noscript=1" />
+        <img height="1" width="1" src="https://www.facebook.com/tr?id=1211586936450413&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Facebook Pixel Code -->
 </head>
@@ -257,7 +257,7 @@
     <div class="container hr-line"></div>
     <div class="container cards">
         <div class="row">
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
                         <img src="./img/avtomaty/GaiaTouch.webp" class="card-img-top" alt="GaiaTouch">
@@ -294,7 +294,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
                         <img src="./img/avtomaty/necta.webp" class="card-img-top" alt="NectaCoroPrime">
@@ -329,7 +329,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
                         <img src="./img/avtomaty/TaliaTouch.webp" class="card-img-top" alt="BianchiTaliaTouch">
@@ -367,7 +367,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
                         <img src="./img/avtomaty/GaiaStyle.webp" class="card-img-top" alt="GaiaStyle">
@@ -402,8 +403,82 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="./img/avtomaty/GaiaStyle.webp" class="card-img-top" alt="GaiaStyle">
+                        <figcaption class="machine">
+                            <ul class="lh-sm">
+                                <li><b>Габарити: <br> </b>Висота 635 мм <br>Ширина 310 мм <br>Глибина 450 мм</li>
+                                <br>
+                                <li><b>Потужність: <br> </b>1,5 кВт</li>
+                                <br>
+                                <li><b>Вага: <br> </b>25 кг</li>
+                            </ul>
+                            <div class="timeline text-center mx-4">
+                                <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
+                                    data-bs-target="#Modal">Замовити</button>
+                            </div>
+                        </figcaption>
+                    </figure>
+                    <div class="card-body">
+                        <h3 class="text-center">Bianchi Gaia Style</h3>
+                        <small>
+                            <p class="lh-sm">Автоматична машина для приготування зернової кави, кавових напоїв і
+                                гарячого шоколаду.</p>
+                            <p class="lh-sm">Можливо стаціонарне або автономне підключення до води.</p>
+                            <p class="lh-sm">Може приготувати 8 видів напоїв на основі кави, сухого молока, какао та
+                                різноманітних кавових міксів.</p>
+                            <!-- <ul>
+                                <li><b>Габарити (ШхВхГ): </b>310 мм х 635 мм х 450 мм</li>
+                                <li><b>Потужність: </b>1,5 кВт</li>
+                                <li><b>Вага: </b>25 кг</li>
+                            </ul> -->
+                        </small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="./img/avtomaty/GaiaStyle.webp" class="card-img-top" alt="GaiaStyle">
+                        <figcaption class="machine">
+                            <ul class="lh-sm">
+                                <li><b>Габарити: <br> </b>Висота 635 мм <br>Ширина 310 мм <br>Глибина 450 мм</li>
+                                <br>
+                                <li><b>Потужність: <br> </b>1,5 кВт</li>
+                                <br>
+                                <li><b>Вага: <br> </b>25 кг</li>
+                            </ul>
+                            <div class="timeline text-center mx-4">
+                                <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
+                                    data-bs-target="#Modal">Замовити</button>
+                            </div>
+                        </figcaption>
+                    </figure>
+                    <div class="card-body">
+                        <h3 class="text-center">Bianchi Gaia Style</h3>
+                        <small>
+                            <p class="lh-sm">Автоматична машина для приготування зернової кави, кавових напоїв і
+                                гарячого шоколаду.</p>
+                            <p class="lh-sm">Можливо стаціонарне або автономне підключення до води.</p>
+                            <p class="lh-sm">Може приготувати 8 видів напоїв на основі кави, сухого молока, какао та
+                                різноманітних кавових міксів.</p>
+                            <!-- <ul>
+                                <li><b>Габарити (ШхВхГ): </b>310 мм х 635 мм х 450 мм</li>
+                                <li><b>Потужність: </b>1,5 кВт</li>
+                                <li><b>Вага: </b>25 кг</li>
+                            </ul> -->
+                        </small>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
+
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="separator">
         <h3>Кавомашини Суперавтомат</h3>
