--- a/src/avtomaty.html
+++ b/src/avtomaty.html
@@ -471,8 +471,8 @@
                             <p class="lh-sm">Контейнер для розчинних продуктів.</p>
                             <p class="lh-sm">Прямий вибір 8 напоїв.</p>
                             <p class="lh-sm">Графічний екран.</p>
-                            <p class="lh-sm">Сенсорні кнопки з Led підсвічуванням. (145 мм)</p>
-                            <p class="lh-sm">Підключення до водопровідної мережі або окремого резервуару. (145 мм)</p>
+                            <p class="lh-sm">Сенсорні кнопки з Led підсвічуванням.</p>
+                            <p class="lh-sm">Підключення до водопровідної мережі або окремого резервуару.</p>
                             <!-- <ul>
                                 <li><b>Габарити (ШхВхГ): </b>310 мм х 635 мм х 450 мм</li>
                                 <li><b>Потужність: </b>1,5 кВт</li>
