--- a/src/ru/avtomaty.html
+++ b/src/ru/avtomaty.html
@@ -257,7 +257,7 @@
     <div class="container hr-line"></div>
     <div class="container cards">
         <div class="row">
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
                         <img src="../img/avtomaty/GaiaTouch.webp" class="card-img-top" alt="GaiaTouch">
@@ -295,7 +295,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
                         <img src="../img/avtomaty/necta.webp" class="card-img-top" alt="NectaCoroPrime">
@@ -331,7 +331,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
                         <img src="../img/avtomaty/TaliaTouch.webp" class="card-img-top" alt="BianchiTaliaTouch">
@@ -369,7 +369,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
                         <img src="../img/avtomaty/GaiaStyle.webp" class="card-img-top" alt="GaiaStyle">
@@ -395,6 +395,83 @@
                             <p class="lh-sm">Возможно стационарное или автономное подключение к воде.</p>
                             <p class="lh-sm">Может приготовить 8 видов напитков на основе кофе, сухого молока, какао и
                                 разнообразных кофейных миксов.</p>
+                            <!-- <ul>
+                                <li><b>Габариты (ШхВхГ): </b>310 мм х 635 мм х 450 мм</li>
+                                <li><b>Мощность: </b>1,5 кВт</li>
+                                <li><b>Вес: </b>25 кг</li>
+                            </ul> -->
+                        </small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="../img/avtomaty/riawendors.webp" class="card-img-top" alt="GaiaStyle">
+                        <figcaption class="machine">
+                            <ul class="lh-sm">
+                                <li><b>Габариты: <br> </b>Высота 580 мм <br>Ширина 295 мм <br>Глубина 495 мм</li>
+                                <br>
+                                <li><b>Мощность: <br> </b>1600 Вт</li>
+                                <br>
+                                <li><b>Вес: <br> </b>26 кг</li>
+                            </ul>
+                            <div class="timeline text-center mx-4">
+                                <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
+                                    data-bs-target="#Modal">Заказать</button>
+                            </div>
+                        </figcaption>
+                    </figure>
+                    <div class="card-body">
+                        <h3 class="text-center">Rheavendors Minibona 2</h3>
+                        <small>
+                            <p class="lh-sm">Современный цветной сенсорный экран с диагональю 7 дюймов для удобного выбора напитков.</p>
+                            <p class="lh-sm">Два бункера для сыпучих ингедиентов.</p>
+                            <p class="lh-sm">Сложная подставка для чашек разных размеров.</p>
+                            <p class="lh-sm">До 24 вкусных вариаций кофе.</p>
+                            <p class="lh-sm">Свободный выбор мягкого или крепкого кофе.</p>
+                            <p class="lh-sm">Структурированный и четкий счетчик напитков.</p>
+                            <p class="lh-sm">Современный вид, создающий участок диспенсера со светодиодной подсветкой.</p>
+                            <!-- <ul>
+                                <li><b>Габариты (ШхВхГ): </b>310 мм х 635 мм х 450 мм</li>
+                                <li><b>Мощность: </b>1,5 кВт</li>
+                                <li><b>Вес: </b>25 кг</li>
+                            </ul> -->
+                        </small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="../img/avtomaty/necta_korinto.webp" class="card-img-top" alt="GaiaStyle">
+                        <figcaption class="machine">
+                            <ul class="lh-sm">
+                                <li><b>Габариты: <br> </b>Высота 715 мм <br>Ширина 331 мм <br>Глубина 528 мм</li>
+                                <br>
+                                <li><b>Мощность: <br> </b>2030 Вт</li>
+                                <br>
+                                <li><b>Вес: <br> </b>33 кг</li>
+                            </ul>
+                            <div class="timeline text-center mx-4">
+                                <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
+                                    data-bs-target="#Modal">Заказать</button>
+                            </div>
+                        </figcaption>
+                    </figure>
+                    <div class="card-body">
+                        <h3 class="text-center">Necta Korinto Prime</h3>
+                        <small>
+                            <p class="lh-sm">Korinto Prime – это новая элегантная модель из семейства Necta Horeca.</p>
+                            <p class="lh-sm">Автоматический встроенный каппучинатор.</p>
+                            <p class="lh-sm">Большая высота выдачи (145 мм)</p>
+                            <p class="lh-sm">Контейнер для растворимых продуктов.</p>
+                            <p class="lh-sm">Прямой выбор 8 напитков.</p>
+                            <p class="lh-sm">Графический экран.</p>
+                            <p class="lh-sm">Сенсорные кнопки с подсветкой Led.</p> 
+                            <p class="lh-sm">Подключение к водопроводной сети или отдельному резервуару.</p> 
                             <!-- <ul>
                                 <li><b>Габариты (ШхВхГ): </b>310 мм х 635 мм х 450 мм</li>
                                 <li><b>Мощность: </b>1,5 кВт</li>
