--- a/src/avtomaty.html
+++ b/src/avtomaty.html
@@ -412,7 +412,7 @@
                             <ul class="lh-sm">
                                 <li><b>Габарити: <br> </b>Висота 580 мм <br>Ширина 295 мм <br>Глибина 495 мм</li>
                                 <br>
-                                <li><b>Потужність: <br> </b>1600 Вт</li>
+                                <li><b>Потужність: <br> </b>1,6 кВт</li>
                                 <br>
                                 <li><b>Вага: <br> </b>26 кг</li>
                             </ul>
@@ -452,7 +452,7 @@
                             <ul class="lh-sm">
                                 <li><b>Габарити: <br> </b>Висота 715 мм <br>Ширина 331 мм <br>Глибина 528 мм</li>
                                 <br>
-                                <li><b>Потужність: <br> </b>2030 Вт</li>
+                                <li><b>Потужність: <br> </b>2 кВт</li>
                                 <br>
                                 <li><b>Вага: <br> </b>33 кг</li>
                             </ul>
