--- a/src/ru/avtomaty.html
+++ b/src/ru/avtomaty.html
@@ -413,7 +413,7 @@
                             <ul class="lh-sm">
                                 <li><b>Габариты: <br> </b>Высота 580 мм <br>Ширина 295 мм <br>Глубина 495 мм</li>
                                 <br>
-                                <li><b>Мощность: <br> </b>1600 Вт</li>
+                                <li><b>Мощность: <br> </b>1,6 кВт</li>
                                 <br>
                                 <li><b>Вес: <br> </b>26 кг</li>
                             </ul>
@@ -451,7 +451,7 @@
                             <ul class="lh-sm">
                                 <li><b>Габариты: <br> </b>Высота 715 мм <br>Ширина 331 мм <br>Глубина 528 мм</li>
                                 <br>
-                                <li><b>Мощность: <br> </b>2030 Вт</li>
+                                <li><b>Мощность: <br> </b>2 кВт</li>
                                 <br>
                                 <li><b>Вес: <br> </b>33 кг</li>
                             </ul>
