--- a/src/avtomaty.html
+++ b/src/avtomaty.html
@@ -317,7 +317,7 @@
                         <small>
                             <p class="lh-sm">Нова кавова машина, яка є найкращою в сегменті ХоРеКа.</p>
                             <p class="lh-sm">Дає можливість приготування кави та кавових напоїв в локаціях з
-                                обмеженим простором. При цьому якість напоїв не поступається кращім зразкам, які були
+                                обмеженим простором. При цьому якість напоїв не поступається кращим зразкам, які були
                                 приготовлені на класичних кавоварках.</p>
                             <p class="lh-sm">Готує напої з зернової кави і молока. Від 15 чашок в день.</p>
                             <!-- <ul>
@@ -427,7 +427,7 @@
                         <small>
                             <p class="lh-sm">Сучасний кольоровий сенсорний екран з діагоналлю
                                 7 дюймів для зручного вибору напоїв.</p>
-                            <p class="lh-sm">Два бункери для сипучіх інгедієнтів.</p>
+                            <p class="lh-sm">Два бункери для сипучих інгедієнтів.</p>
                             <p class="lh-sm">Складна підставка для чашок різних розмірів.</p>
                             <p class="lh-sm">До 24 смачних варіацій кави.</p>
                             <p class="lh-sm">Вільний вибір м'якої або міцної кави.</p>
