--- a/src/dlya_magazinov_i_setey.html
+++ b/src/dlya_magazinov_i_setey.html
@@ -598,7 +598,7 @@
                                 aria-controls="Gaia-collapseSeven">
                                 <div class="row">
                                     <div class="col text-nowrap accordion-drink">
-                                        MAXI Ірландський Вискі
+                                        MAXI Ірландський Віскі
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink maxiIrish">
                                         0,00 грн.
@@ -619,7 +619,7 @@
                                 aria-controls="Gaia-collapseEight">
                                 <div class="row">
                                     <div class="col text-nowrap accordion-drink">
-                                        Ірландський Вискі лате
+                                        Ірландський Віскі лате
                                     </div>
                                     <div class="col text-nowrap text-end accordion-drink irishLate">
                                         0,00 грн.
