--- a/src/zernovoy_kofe.html
+++ b/src/zernovoy_kofe.html
@@ -310,7 +310,7 @@
                             <p class="lh-sm">Elite— високоякісне зерно, що поєднує в собі делікатну кислинку та
                                 насичений смак професійного обсмаження.</p>
                             <p class="lh-sm">Перший ковток розкривається яскравим апельсином та продовжується червоним
-                                яблоком. А шоколадний післясмак вдало поєднується із завершуючою нотою мускатного
+                                яблуком. А шоколадний післясмак вдало поєднується із завершуючою нотою мускатного
                                 горіха.</p>
                         </small>
                     </div>
