add Lead action

--- a/src/contacty.html
+++ b/src/contacty.html
@@ -42,6 +42,7 @@
             'https://connect.facebook.net/en_US/fbevents.js');
         fbq('init', '1211586936450413');
         fbq('track', 'PageView');
+        fbq('track', 'Lead');
     </script>
     <noscript>
         <img height="1" width="1" src="https://www.facebook.com/tr?id=1211586936450413&ev=PageView&noscript=1" />
