calc link fixed

--- a/src/ru/zernovoy_kofe.html
+++ b/src/ru/zernovoy_kofe.html
@@ -351,7 +351,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Закрыть"></button>
             </div>
             <div class="toast-body text-center fw-bold">
-                Воспользуйтесь нашим <a href="../dlya_magazinov_i_setey.html#calc">калькулятором</a>.
+                Воспользуйтесь нашим <a href="./dlya_magazinov_i_setey.html#calc">калькулятором</a>.
             </div>
         </div>
     </div>
