--- a/src/ru/dlya_cafe_restoranov.html
+++ b/src/ru/dlya_cafe_restoranov.html
@@ -428,7 +428,7 @@
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
                             Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
-                            Черкассы
+                            Черкассы, Хмельницкий
                         </p>
                         <div class="row">
                             <div class="col col-auto col-md-6 footer-left">
