--- a/src/avtomaty.html
+++ b/src/avtomaty.html
@@ -670,7 +670,7 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                            Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Умань, Бровари, Бориспіль, Черкаси
+                            Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Умань, Бровари, Бориспіль, Черкаси, Хмельницький
                         </p>
                         <div class="row">
                             <div class="col col-auto col-md-6 footer-left">
