--- a/src/index.html
+++ b/src/index.html
@@ -452,7 +452,7 @@
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
                             Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Умань, Бровари, Бориспіль,
-                            Черкаси
+                            Черкаси, Хмельницький
                         </p>
                         <div class="row">
                             <div class="col col-auto col-md-6 footer-left">
