Изменены телефоны в шапке и подвале

--- a/src/ru/syropi.html
+++ b/src/ru/syropi.html
@@ -60,23 +60,23 @@
                                 <a class="telephone" href="tel:+380960542770">ХАРЬКОВ (096) 054-27-70</a>
                             </li>
                             <li class="telephone text-nowrap">
-                                <a class="telephone" href="tel:+380935475572">(093) 547-55-72</a>
+                                <a class="telephone" href="tel:+380660227720">КИЕВ, РОВНО (066) 022-77-20</a>
                             </li>
                         </ul>
                     </div>
-                    <div class="header__item col">
+                    <!-- <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">КИЕВ</li>
                             <li class="telephone text-nowrap">
                                 <a class="telephone" href="tel:+380660227720">(066) 022-77-20</a>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                     <div class="header__item col">
                         <ul>
-                            <li class="telephone text-nowrap">БРОВАРЫ, БОРИСПОЛЬ</li>
+                            <li class="telephone text-nowrap">БРОВАРЫ, БОРИСПОЛЬ,</li>
                             <li class="telephone text-nowrap">
-                                <a class="telephone" href="tel:+380989700921">(098) 970-09-21</a>
+                                <a class="telephone" href="tel:+380989700921">ЧЕРНИГОВ (098) 970-09-21</a>
                             </li>
                         </ul>
                     </div>
@@ -949,13 +949,12 @@
                             Черкассы, Хмельницкий
                         </p>
                         <div class="row">
-                            <div class="col col-auto col-md-6 footer-left">
+                            <div class="col col-md-6 footer-left">
                                 <h6>Харьков</h6>
                                 <a class="telephone text-nowrap" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
-                                <a class="telephone text-nowrap" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
                             </div>
-                            <div class="col col-auto col-md-6 footer-left">
-                                <h6>Киев</h6>
+                            <div class="col col-md-6 footer-left">
+                                <h6>Киев, Ровно</h6>
                                 <a class="telephone text-nowrap" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                             </div>
                         </div>
@@ -965,7 +964,7 @@
                                 <a class="telephone text-nowrap" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
                             </div>
                             <div class="col footer-left">
-                                <h6>Бровары, Борисполь</h6>
+                                <h6>Бровары, Борисполь, Чернигов</h6>
                                 <a class="telephone text-nowrap" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
                             </div>
                         </div>
