--- a/src/zernovoy_kofe.html
+++ b/src/zernovoy_kofe.html
@@ -60,23 +60,23 @@
                                 <a class="telephone" href="tel:+380960542770">ХАРКІВ (096) 054-27-70</a>
                             </li>
                             <li class="telephone text-nowrap">
-                                <a class="telephone" href="tel:+380935475572">(093) 547-55-72</a>
+                                <a class="telephone" href="tel:+380660227720">КИЇВ, РІВНЕ (066) 022-55-72</a>
                             </li>
                         </ul>
                     </div>
-                    <div class="header__item col">
+                    <!-- <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">КИЇВ</li>
                             <li class="telephone text-nowrap">
                                 <a class="telephone" href="tel:+380660227720">(066) 022-77-20</a>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                     <div class="header__item col">
                         <ul>
-                            <li class="telephone text-nowrap">БРОВАРИ, БОРИСПІЛЬ</li>
+                            <li class="telephone text-nowrap">БРОВАРИ, БОРИСПІЛЬ,</li>
                             <li class="telephone text-nowrap">
-                                <a class="telephone" href="tel:+380989700921">(098) 970-09-21</a>
+                                <a class="telephone" href="tel:+380989700921">ЧЕРНІГІВ (098) 970-09-21</a>
                             </li>
                         </ul>
                     </div>
@@ -363,17 +363,15 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                            Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Умань, Бровари, Бориспіль,
-                            Черкаси, Хмельницький
+                            Встановлення кавових машин по містах: Харків, Київ, Рівне, Біла Церква, Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький
                         </p>
                         <div class="row">
-                            <div class="col col-auto col-md-6 footer-left">
+                            <div class="col col-md-6 footer-left">
                                 <h6>Харків</h6>
                                 <a class="telephone text-nowrap" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
-                                <a class="telephone text-nowrap" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
                             </div>
-                            <div class="col col-auto col-md-6 footer-left">
-                                <h6>Київ</h6>
+                            <div class="col col-md-6 footer-left">
+                                <h6>Київ, Рівне</h6>
                                 <a class="telephone text-nowrap" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                             </div>
                         </div>
@@ -383,7 +381,7 @@
                                 <a class="telephone text-nowrap" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
                             </div>
                             <div class="col footer-left">
-                                <h6>Бровари, Бориспіль</h6>
+                                <h6>Бровари, Бориспіль, Чернігів</h6>
                                 <a class="telephone text-nowrap" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
                             </div>
                         </div>
