--- a/src/contacty.html
+++ b/src/contacty.html
@@ -84,19 +84,19 @@
                     </div>
                     <div class="header__item col">
                         <ul>
-                            <li class="telephone text-nowrap">БІЛА ЦЕРКВА, УМАНЬ</li>
                             <li class="telephone text-nowrap">
-                                <a class="telephone" href="tel:+380504400492">(050) 440-04-92</a>
+                                <a class="telephone" href="tel:+380504400492">Б.ЦЕРКВА, УМАНЬ (050) 440-04-92</a>
+                            </li>
+                            <li class="telephone text-nowrap">
+                                <a class="telephone text-nowrap" href="tel:+380989700929">ЧЕРКАСИ (098) 970-09-29</a>
                             </li>
                         </ul>
                     </div>
                     <div class="header__item col">
                         <ul>
+                            <li class="telephone text-nowrap">ХМЕЛЬНИЦЬКИЙ, ВІННИЦЯ</li>
                             <li class="telephone text-nowrap">
-                                <a class="telephone text-nowrap" href="tel:+380989700929">ЧЕРКАСИ (098) 970-09-29</a>
-                            </li>
-                            <li class="telephone text-nowrap">
-                                <a class="telephone text-nowrap" href="tel:+380974996005">ХМЕЛЬНИЦЬКИЙ (097) 499-60-05</a>
+                                <a class="telephone text-nowrap" href="tel:+380974996005">(097) 499-60-05</a>
                             </li>
                         </ul>
                     </div>
@@ -283,7 +283,7 @@
                     </li>
                 </ul>
                 <div class="container hr-line-contacts"></div>
-                <h6><b>ХМЕЛЬНИЦЬКИЙ</b></h6>
+                <h6><b>ХМЕЛЬНИЦЬКИЙ, ВІННИЦЯ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
                         <i class="bi bi-telephone-fill green"></i>
@@ -388,7 +388,7 @@
                                 <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
                             </div>
                             <div class="col footer-left">
-                                <h6>Хмельницький</h6>
+                                <h6>Хмельницький, Вінниця</h6>
                                 <a class="telephone text-nowrap" href="tel:+380974996005">т. +38 (097) 499-60-05</a>
                             </div>
                         </div>
