--- a/src/ru/dlya_cafe_restoranov.html
+++ b/src/ru/dlya_cafe_restoranov.html
@@ -83,19 +83,19 @@
                     </div>
                     <div class="header__item col">
                         <ul>
-                            <li class="telephone text-nowrap">БЕЛАЯ ЦЕРКОВЬ, УМАНЬ</li>
                             <li class="telephone text-nowrap">
-                                <a class="telephone" href="tel:+380504400492">(050) 440-04-92</a>
+                                <a class="telephone" href="tel:+380504400492">Б.ЦЕРКОВЬ, УМАНЬ (050) 440-04-92</a>
+                            </li>
+                            <li class="telephone text-nowrap">
+                                <a class="telephone text-nowrap" href="tel:+380989700929">ЧЕРКАССЫ (098) 970-09-29</a>
                             </li>
                         </ul>
                     </div>
                     <div class="header__item col">
                         <ul>
+                            <li class="telephone text-nowrap">ХМЕЛЬНИЦКИЙ, ВИННИЦА</li>
                             <li class="telephone text-nowrap">
-                                <a class="telephone text-nowrap" href="tel:+380989700929">ЧЕРКАССЫ (098) 970-09-29</a>
-                            </li>
-                            <li class="telephone text-nowrap">
-                                <a class="telephone text-nowrap" href="tel:+380974996005">ХМЕЛЬНИЦКИЙ (097) 499-60-05</a>
+                                <a class="telephone text-nowrap" href="tel:+380974996005">(097) 499-60-05</a>
                             </li>
                         </ul>
                     </div>
@@ -456,7 +456,7 @@
                                 <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
                             </div>
                             <div class="col footer-left">
-                                <h6>Хмельницкий</h6>
+                                <h6>Хмельницкий, Винница</h6>
                                 <a class="telephone text-nowrap" href="tel:+380974996005">т. +38 (097) 499-60-05</a>
                             </div>
                         </div>
