--- a/src/contacty.html
+++ b/src/contacty.html
@@ -18,21 +18,24 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <!-- Google Tag Manager -->
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-76167740-3');
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-542DDWNW');
     </script>
+    <!-- End Google Tag Manager -->
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -51,6 +54,12 @@
 </head>
 
 <body class="contacts_body">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-542DDWNW" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- /////////////////////////////////////////   Header    //////////////////////////////////////// -->
     <header class="header">
         <div class="header__up">
@@ -96,7 +105,8 @@
                                 <a class="telephone text-nowrap" href="tel:+380989700929">ЧЕРКАСИ (098) 970-09-29</a>
                             </li>
                             <li class="telephone text-nowrap">
-                                <a class="telephone text-nowrap" href="tel:+380974996005">ХМЕЛЬНИЦЬКИЙ (097) 499-60-05</a>
+                                <a class="telephone text-nowrap" href="tel:+380974996005">ХМЕЛЬНИЦЬКИЙ (097)
+                                    499-60-05</a>
                             </li>
                         </ul>
                     </div>
@@ -360,7 +370,8 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                            Встановлення кавових машин по містах: Харків, Київ, Рівне, Біла Церква, Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький
+                            Встановлення кавових машин по містах: Харків, Київ, Рівне, Біла Церква, Умань, Бровари,
+                            Бориспіль, Чернігів, Черкаси, Хмельницький
                         </p>
                         <div class="row">
                             <div class="col col-md-6 footer-left">
